src/objects/Apttus_Revenue2__Agreement_Revenue_Adjustment_Schedule__c.object
<CustomObject>
    <description>Holds the revenue adjustments for an agreement</description>
    <fields>
        <fullName>Apttus_Revenue2__Adjustment_Amount__c</fullName>
        <description>Revenue adjustment amount</description>
        <inlineHelpText>Revenue adjustment amount</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement__c</fullName>
        <description>Associated agreement</description>
        <inlineHelpText>Associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Agreement_Revenue_Adjustment_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Comments__c</fullName>
        <description>Memo text</description>
        <inlineHelpText>Memo text</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Period_Date__c</fullName>
        <description>Revenue period date</description>
        <inlineHelpText>Revenue period date</inlineHelpText>
        <label>Period Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Period_Number__c</fullName>
        <description>Revenue period number</description>
        <inlineHelpText>Revenue period number</inlineHelpText>
        <label>Period Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Subtype__c</fullName>
        <description>Revenue subtype</description>
        <inlineHelpText>Revenue subtype</inlineHelpText>
        <label>Revenue Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Revenue2__Revenue_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active User Server Fees</fullName>
                </value>
                <value>
                    <fullName>Software Maintenance</fullName>
                </value>
                <value>
                    <fullName>Porting</fullName>
                </value>
                <value>
                    <fullName>Link Updates</fullName>
                </value>
                <value>
                    <fullName>Database Updates</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Finger Print Updates</fullName>
                </value>
                <value>
                    <fullName>Advertising Revenue</fullName>
                </value>
                <value>
                    <fullName>Commission Income</fullName>
                </value>
                <value>
                    <fullName>Ecommerce Revenue</fullName>
                </value>
                <value>
                    <fullName>Flat Fee Income</fullName>
                </value>
                <value>
                    <fullName>Production based</fullName>
                </value>
                <value>
                    <fullName>Revenue Share</fullName>
                </value>
                <value>
                    <fullName>SW License</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Type__c</fullName>
        <description>Revenue type</description>
        <inlineHelpText>Revenue type</inlineHelpText>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Revenue Adjustment Schedule</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Revenue Adj Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Revenue Adjustment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>